# mirro-rs

./: Cargo.toml  README.md  REAME.md  mirro-rs.toml
assets/: arch_mirrors.json
linux-mirrors/: Cargo.toml
linux-mirrors/src/: lib.rs
linux-mirrors/src/archlinux/: mod.rs  response.rs
mirro-rs/: Cargo.toml
mirro-rs/src/: lib.rs  main.rs
mirro-rs/src/app/: actions.rs  config.rs  export.rs  mod.rs  state.rs  ui.rs
mirro-rs/src/inputs/: events.rs
mirro-rs/src/io/: handler.rs  mod.rs
