[package]
name = "mirro-rs"
version = "0.1.0"
edition = "2021"
authors = ["Rodney Kanjala <dev@kanjala.com>"]
repository = "https://github.com/kawaki-san/mirro-rs"
license = "MIT"
description = "A TUI mirrorlist manager for Linux"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-mirrors = { path = "../linux-mirrors", features = ["archlinux"] }
