[package]
name = "mirro-rs"
version = "0.1.0"
edition = "2021"
authors = ["Rodney Kanjala <dev@kanjala.com>"]
repository = "https://github.com/kawaki-san/mirro-rs"
license = "MIT"
description = "A TUI mirrorlist manager for Linux"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-mirrors = { path = "../linux-mirrors", features = ["archlinux"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
crossterm = "0.22"
tui = { version = "0.17", default-features = false, features = ['crossterm'] }
unicode-width = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
clap = { version = "3", features = ["cargo"] }
chrono = "0.4"
